Fix login inputs on mobile devices

--- a/css/raspcontrol.css
+++ b/css/raspcontrol.css
@@ -71,6 +71,9 @@ header img {
 .form-login {
   margin: 20px 0 60px 0;
 }
+.form-login input {
+  margin-bottom: 10px;
+}
 
 .details table {
   width: 100%;
